--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <h2>Please wait about 10 seconds after submitting your image. Thanks!</h2>
   </body>
 </html>
